css/responsive.css
/* ... */
@media( max-width:600px) {
/* Gallery */
.columns-3 .grid-item { width: 100%; }
.columns-4 .grid-item { width: 100%; }
.columns-2 .grid-item { width: 100%; }
}

@media( max-width:479px) {
/* Home 1 */
.page-section-ptb { padding: 40px 0; }
h2,h3 { font-size: 30px;line-height: 30px; }
.pricing-grid .pricing-table .pricing-title h2 { font-size: 30px; line-height: 30px; }
.tabs ul.tabs-link li{  font-size: 0; }
.tabs ul.tabs-link.without-icon li{  font-size: 22px; }
.tabs ul.tabs-link li i:before { font-size: 28px; }
.menu-body.menu-left .menu-thumbnail { float: none; width: 100%; margin-bottom: 15px; }
.menu-body.menu-right .menu-thumbnail { float: none; width: 100%; margin-bottom: 15px; }
.menu-body .menu-title h4 { font-size: 25px; }
.menu-body .menu-details .price { font-size: 25px; }
.menu-body.menu-left .menu-title{margin-bottom: 12px; padding-bottom: 0; }
.testimonial-block.left .testimonial-avatar { float: none; margin-bottom: 10px; }
.testimonial-block.right .testimonial-avatar { float: none; margin-bottom: 10px; }
.testimonial-info { padding: 10px; }
.testimonial-block.left .testimonial-info { padding-left: 10px; display: block;  text-align: center; }
.testimonial-block.right .testimonial-info { padding-left: 10px; display: block;  text-align: center; }
.footer-social .list-inline>li { padding-left: 2px; }
.footer .footer-social ul li a { width: 40px; height: 40px; line-height: 40px; }
.footer .footer-bottom { padding: 30px 0px; }
#back-to-top .top {  width: 40px; height: 40px; line-height: 40px; }

/* Home 2 */
.about-2 h2 { font-size: 30px; line-height: 30px; }
.footer-2 .footer-bottom {  line-height: 20px; }
.belief { padding-bottom: 0px;}

/* Home 3 */
.footer-3 .footer-bottom { margin-top: 30px; }

/* Home 4 */
.full-screen .grid-item { width: 100%; }
.isotope-filters { margin: 0 auto 20px; text-align: center; }
.isotope-filters  button { margin: 5px; text-align: center; }
.visit-content h2 { line-height: 30px; }
.visit-content .flaticon-restaurant-7:before { font-size: 30px; line-height: 30px;  }

/* Home 5 */
.pleasure .time-box .glyph-icon:before {font-size:50px;line-height: 50px;}
.pleasure h5 { font-size: 30px; line-height: 30px; }
.menu-body.menu-white .menu-thumbnail { margin-bottom: 15px; }
.menu-body.menu-white .menu-title { margin-bottom: 15px; }

/* About */
.inner-intro { height: 310px; }
.inner-intro h1 { font-size: 40px; line-height: 40px; }
ul.page-breadcrumb { padding-top: 20px; }
ul.page-breadcrumb li i { padding: 0 2px; }
.custom-content h2 { font-size: 30px; line-height: 30px; }
.our-activities h3 { font-size: 30px; line-height: 30px; }
.skills-2 li { font-size: 14px; }
.accordion .accordion-title a:after { left: 12px; }
.accordion .accordion-title a { padding: 11px 40px; }
.accordion .accordion-title { font-size: 14px; }
.error-page h3 { font-size: 40px; line-height: 40px; }
.error-page strong { font-size: 15px; margin-bottom: 10px; }

/* Coming soon */
.countdown h2 { font-size: 24px; line-height: 24px; }
.coming-soon .countdown p { line-height: 20px; margin-bottom: 86px; }
.coming-soon .countdown { margin: 0 0 60px; }
.coming-soon .countdown li span { font-size: 30px; line-height: 30px; }
.coming-soon .countdown li p{ font-size: 14px; line-height: 20px; }
.coming-soon .coming-soon-search p { margin-bottom: 10px; }
.coming-soon-search a.button-orange-medium { padding: 16px 11px; }
.contact-form .form-field { margin-bottom: 8px; }

/* Menu */
.menu-list-bg { height: 100px; }
.menu-list-bg .content-text h2 { font-size: 30px; line-height: 30px; margin-bottom: 0; }
.our-menu #tabs .tabs li i::before { font-size: 40px; }

/* Blog pages */
.entry-content h3 { font-size: 25px; }
.entry-content .entry-date { width: 46px; height: 57px; padding: 5px; }
.entry-meta a { margin-right:2px ; }

/* Contact */
.contact-map { height: 200px; }

/* Masonry */
.social.list-style-none.float-end { float: none !important; margin-top: 10px; }

/* Revolution slider font setting */
.mo-details-text { font-size: 11px !important; line-height: 14px !important; }
.mo-sub-title-text { font-size: 14px !important; }
.mo-text-uppercase { font-size: 9px !important; line-height: 9px !important; }

}

@media( max-width:320px) {
/* Home 4 */
.isotope-filters  button { font-size: 13px; padding: 3px; }
.error-page .link-button  a { margin-bottom: 20px; }
.coming-soon-search a.button-orange-medium { padding: 16px 4px; display: block; }
}

